[project]
name = "ytlive-helper-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "nuitka>=2.8.9",
    "numpy>=2.4.0",
    "obsws-python>=1.8.0",
    "pillow>=12.1.0",
    "pyarmor>=9.2.3",
    "pyinstaller>=6.17.0",
    "pytchat>=0.5.5",
    "requests>=2.32.5",
]
